--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -1,14 +1,13 @@
-
 @import "custom_bootstrap_vars";
 @import "bootstrap";
-
+@import "slick.scss", "slick-theme.scss";
 
 
 
 // project specific CSS goes here
 
 ////////////////////////////////
-		//Variables//
+//Variables//
 ////////////////////////////////
 
 // Alert colors
@@ -21,7 +20,7 @@ $dark-pink: #eed3d7;
 $red: #b94a48;
 
 ////////////////////////////////
-		//Alerts//
+//Alerts//
 ////////////////////////////////
 
 // bootstrap alert CSS, translated to the django-standard levels of
@@ -37,4 +36,253 @@ $red: #b94a48;
   background-color: $pink;
   border-color: $dark-pink;
   color: $red;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  // src: url('webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/pfbeausanspro-reg.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  //  url('webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  //  url('webfont.woff2') format('woff2'), /* Super Modern Browsers */
+  //  url('webfont.woff') format('woff'), /* Pretty Modern Browsers */
+  //  url('webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  src: url('../fonts/pfbeausanspro-book.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  src: url('../fonts/pfbeausanspro-bookitalic.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  src: url('../fonts/pfbeausanspro-bold.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  src: url('../fonts/pfbeausanspro-bolditalic.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'pfbeausanspro';
+  src: url('../fonts/pfbeausanspro-italic.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'nunito';
+  src: url('../fonts/Nunito-Regular.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'nunito';
+  src: url('../fonts/Nunito-Bold.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+  /* Safari, Android, iOS */
+  font-weight: bold;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Montserrat', 'Trebuchet MS', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+section.main {
+  flex: 1 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  color: $dark;
+  font-family: 'pfbeausanspro', 'Trebuchet MS', Arial, sans-serif;
+  font-weight: bold;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @media screen and (max-width:768px) {
+    font-size: 1.5rem;
+  }
+
+  @media screen and (max-width:576px) {
+    font-size: 1.3rem;
+    text-align: center;
+  }
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.alert-debug {
+  background-color: $white;
+  border-color: $mint-green;
+  color: $black;
+}
+
+.alert-error {
+  background-color: $pink;
+  border-color: $dark-pink;
+  color: $red;
+}
+
+// Header
+.header {
+  border-bottom: 1px solid #eee;
+}
+
+img.logo {
+  width: 150px;
+}
+
+.form-control.mr-sm-2.top-search {
+  width: 120px;
+}
+
+// Breadcrumbs
+.breadcrumb {
+  font-size: 0.8rem;
+}
+
+// Main content
+.country_info {
+  font-size: 14px;
+  line-height: 16px;
+}
+
+img.main-flag {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+// Colors
+.colors {
+  display: flex;
+  flex-direction: row;
+}
+
+.badge-100 {
+  font-size: 100% !important;
+}
+
+.color-square {
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgb(19, 19, 19);
+  border-radius: 6px;
+  margin: 10px 0px;
+}
+
+// Border countries flags
+
+.flag-card {
+  margin: 0px !important;
+  padding: 0px !important;
+  height: 120px;
+  overflow: hidden;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, .125);
+  border-radius: .25rem;
+  position: relative;
+}
+
+.flag-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.hover-country:hover .image {
+  opacity: 0.3;
+}
+
+.hover-country:hover .middle {
+  opacity: 1;
+}
+
+.text a {
+  color: $dark;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+// Footer
+.footer {
+  background-color: $dark;
+  min-height: 100px;
+  color: $white;
 }
