added styles for draft items

--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -205,6 +205,11 @@ img.main-flag {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+// Drafts
+.draft {
+  background-color: #eee;
+}
+
 // Colors
 .colors {
   display: flex;
