--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8793,6 +8793,9 @@ img.main-flag {
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
 
+.draft {
+  background-color: #eee; }
+
 .colors {
   display: -webkit-box;
   display: -ms-flexbox;
