--- a/app/templates/flags/flags-by-region.html
+++ b/app/templates/flags/flags-by-region.html
@@ -67,7 +67,7 @@
   <div class="container">
     <div class="row">
       {% for flag in flags %}
-      <div class="col-4 col-md-3 col-lg-2 col-xl-2">
+      <div class="pb-4 col-4 col-md-3 col-lg-2 col-xl-2">
         <div class="flag-card hover-country">
 
           <a href="{% url 'flags:flag-detail' flag.slug %}">
