--- a/app/templates/flags/flags-list.html
+++ b/app/templates/flags/flags-list.html
@@ -6,12 +6,12 @@
   <div class="container">
     <div class="row">
       <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
-        <h1>Флаги стран мира</h1>
+        <h1>Флаги стран мира ({{flags|length}})</h1>
       </div>
       {# {% regroup flags by country|make_list|first as country_list %} #}
 
       {% for flag in flags %}
-      <div class="col-4 col-md-3 col-lg-2 col-xl-2">
+      <div class="pb-4 col-4 col-md-3 col-lg-2 col-xl-2">
         <div class="flag-card hover-country">
 
           <a href="{% url 'flags:flag-detail' flag.slug %}">
