--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8874,6 +8874,17 @@ img.main-flag {
   min-height: 100px;
   color: #fff; }
 
+.footer a {
+  color: #eee;
+  text-decoration: none; }
+
+.footer a:hover {
+  text-decoration: underline; }
+
+.footer .copywrite {
+  background: #2e2e2e;
+  border-top: 1px solid #444; }
+
 .dropdown-submenu {
   position: relative; }
 
