--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -291,6 +291,17 @@ img.main-flag {
   min-height: 100px;
   color: $white;
 }
+.footer a {
+  color: #eee;
+  text-decoration: none;
+}
+.footer a:hover {
+  text-decoration: underline;
+}
+.footer .copywrite {
+  background: #2e2e2e;
+  border-top: 1px solid #444;
+}
 
 // Dropdown Submenu
 .dropdown-submenu {
