--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{% block meta_title %}{% endblock %}</title>
+  {% spaceless %}
   <meta name="description" content="{% block meta_description %}{% endblock %}" />
+  {% endspaceless %}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Baikov">
   <meta name="robots" content="{% block meta_robots %}{% endblock %}" />
@@ -44,6 +46,7 @@
   {% compress js %}<script defer src="{% static 'js/project.js' %}"></script>{% endcompress %}
 
   {% endblock javascript %}
+  {% block json-ld %}{% endblock json-ld %}
 
 </head>
 
