--- a/app/templates/flags/flags-by-region.html
+++ b/app/templates/flags/flags-by-region.html
@@ -23,17 +23,17 @@
 {% block content %}
 
 {# H1 #}
-<div class="py-3">
+<div class="pt-5 pb-3">
   <div class="container">
-      <div class="row">
-        <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
-        {% if region.seo_h1 %}
-          <h1>{{region.seo_h1}}</h1>
-        {% else %}
-          <h1>Флаги стран региона {{region.name}}</h1>
-        {% endif %}
-        </div>
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center">
+      {% if region.seo_h1 %}
+        <h1>{{region.seo_h1}}</h1>
+      {% else %}
+        <h1>Флаги стран региона {{region.name}}</h1>
+      {% endif %}
       </div>
+    </div>
   </div>
 </div>
 
@@ -63,61 +63,32 @@
 {% endif %}
 
 {# Flags list #}
-<div class="py-3">
-  <div class="container">
-    <div class="row">
-      {% for flag in flags %}
-      <div class="pb-4 col-4 col-md-3 col-lg-2 col-xl-2">
-        <div class="flag-card hover-country">
-
-          <a href="{% url 'flags:flag-detail' flag.slug %}">
-            <picture>
-              <source type="image/webp" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.webp">
-              <source type="image/png" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png">
-
-              <img src="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png" alt="{{ flag.title }}"
-                title="{{ flag.title }} {{flag.name}} - картинка" class="image">
-            </picture>
-          </a>
-
-          <div class="middle">
-            <div class="text">
-              <a href="{% url 'flags:flag-detail' flag.slug %}">
-                {{flag.title}}
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
-
-    </div>
-  </div>
-</div>
+{% include "partials/_flags-list.html" with flags=flags %}
 
 {% endblock content %}
 
-{# SEO block #}
-{# Canonical #}
-{% block canonical %}
-  {% if region.parent %}
-    {% url 'flags:subregion-flags' region.parent.slug region.slug %}
-  {% else %}
-    {% url 'flags:region-flags' region.slug %}
-  {% endif %}
-{% endblock canonical %}
+{# Begin SEO block #}
+  {# Canonical #}
+  {% block canonical %}
+    {% if region.parent %}
+      {% url 'flags:subregion-flags' region.parent.slug region.slug %}
+    {% else %}
+      {% url 'flags:region-flags' region.slug %}
+    {% endif %}
+  {% endblock canonical %}
 
-{# Meta title #}
-{% block meta_title %}
-{{region.seo_title}}
-{% endblock meta_title %}
+  {# Meta title #}
+  {% block meta_title %}
+  {{region.seo_title}}
+  {% endblock meta_title %}
 
-{# Meta description #}
-{% block meta_description %}
-{{region.seo_description}}
-{% endblock meta_description %}
+  {# Meta description #}
+  {% block meta_description %}
+  {{region.seo_description}}
+  {% endblock meta_description %}
 
-{% block meta_robots %}
-  {% if region.is_index %}index,{% else %}noindex,{% endif %}
-  {% if region.is_follow %}follow{% else %}nofollow{% endif %}
-{% endblock meta_robots %}
+  {% block meta_robots %}
+    {% if region.is_index %}index,{% else %}noindex,{% endif %}
+    {% if region.is_follow %}follow{% else %}nofollow{% endif %}
+  {% endblock meta_robots %}
+{# End SEO block #}
