--- a/app/templates/flags/colors-count.html
+++ b/app/templates/flags/colors-count.html
@@ -2,65 +2,41 @@
 {% load i18n my_filter %}
 
 {% block content %}
-<div class="py-3">
-  <div class="container">
-    <div class="row">
-      <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
-        <h1>Флаги стран содержащие
+  {# H1 #}
+  <div class="pt-5 pb-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center">
+          <h1>Флаги стран содержащие
           {%if color_count > 1 %}
           {{color_count}} цветов
           {%else%}
           {{color_count}} цвет
-          {%endif%}
-        </h1>
-      </div>
-
-      {% for flag in flags %}
-      <div class="col-4 col-md-3 col-lg-2 col-xl-2">
-        <div class="flag-card hover-country">
-
-          <a href="{% url 'flags:flag-detail' flag.slug %}">
-            <picture>
-              <source type="image/webp" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.webp">
-              <source type="image/png" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png">
-
-              <img src="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png" alt="{{ flag.title }}"
-                title="{{ flag.title }} {{flag.name}} - картинка" class="image">
-            </picture>
-          </a>
-
-          <div class="middle">
-            <div class="text">
-              <a href="{% url 'flags:flag-detail' flag.slug %}">
-                {{flag.title}}
-              </a>
-            </div>
-          </div>
+          {%endif%}</h1>
         </div>
       </div>
-      {% endfor %}
-
     </div>
   </div>
-</div>
-
+  {# Flags list #}
+  {% include "partials/_flags-list.html" with flags=flags %}
 {% endblock content %}
 
-{# SEO block #}
-{% block meta_title %}
+{# Begin SEO block #}
+  {% block meta_title %}
 
-{% endblock meta_title %}
+  {% endblock meta_title %}
 
-{# Meta description #}
-{% block meta_description %}
+  {# Meta description #}
+  {% block meta_description %}
 
-{% endblock meta_description %}
+  {% endblock meta_description %}
 
-{# Meta keywords #}
-{% block meta_keywords %}
+  {# Meta keywords #}
+  {% block meta_keywords %}
 
-{% endblock meta_keywords %}
+  {% endblock meta_keywords %}
 
-{% block meta_robots %}
-index,follow
-{% endblock meta_robots %}
+  {% block meta_robots %}
+  index,follow
+  {% endblock meta_robots %}
+{# End SEO block #}
