--- a/app/templates/flags/flags-list.html
+++ b/app/templates/flags/flags-list.html
@@ -2,56 +2,36 @@
 {% load i18n my_filter %}
 
 {% block content %}
-<div class="py-3">
+{# H1 #}
+<div class="pt-5 pb-3">
   <div class="container">
-    <div class="row">
-      <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
-        <h1>Флаги стран мира ({{flags|length}})</h1>
-      </div>
-      {# {% regroup flags by country|make_list|first as country_list %} #}
-
-      {% for flag in flags %}
-      <div class="pb-4 col-4 col-md-3 col-lg-2 col-xl-2">
-        <div class="flag-card hover-country">
-
-          <a href="{% url 'flags:flag-detail' flag.slug %}">
-            <picture>
-              <source type="image/webp" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.webp">
-              <source type="image/png" srcset="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png">
-
-              <img src="{{flag.country.iso_code_a2|get_img_path:'w320'}}.png" alt="{{ flag.title }}"
-                title="{{ flag.title }} {{flag.name}} - картинка" class="image">
-            </picture>
-          </a>
-
-          <div class="middle">
-            <div class="text">
-              <a href="{% url 'flags:flag-detail' flag.slug %}">
-                {{flag.title}}
-              </a>
-            </div>
-          </div>
+      <div class="row">
+        <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
+          <h1>Флаги стран мира ({{flags|length}})</h1>
         </div>
       </div>
-      {% endfor %}
-    </div>
-
   </div>
 </div>
+
+{# {% regroup flags by country|make_list|first as country_list %} #}
+
+{% include "partials/_flags-list.html" with flags=flags %}
+
 {% endblock content %}
 
-{# SEO block #}
-{% block meta_title %}
-Флаги стран мира - {{flags|length}} шт
-{% endblock meta_title %}
+{# Begin SEO block #}
+  {% block meta_title %}
+  Флаги стран мира - {{flags|length}} шт
+  {% endblock meta_title %}
 
-{% block meta_description %}
-Флаги стран мира в картинках - коды цветов, история, описание.
-Список флагов государств с возможностью скачать картинки бесплатно в векторном и растровом форматах.
-{% endblock meta_description %}
+  {% block meta_description %}
+  Флаги стран мира в картинках - коды цветов, история, описание.
+  Список флагов государств с возможностью скачать картинки бесплатно в векторном и растровом форматах.
+  {% endblock meta_description %}
 
-{% block meta_keywords %}{% endblock meta_keywords %}
+  {% block meta_keywords %}{% endblock meta_keywords %}
 
-{% block meta_robots %}
-index, follow
-{% endblock meta_robots %}
+  {% block meta_robots %}
+  index, follow
+  {% endblock meta_robots %}
+{# End SEO block #}
