--- a/app/templates/flags/region-list.html
+++ b/app/templates/flags/region-list.html
@@ -15,13 +15,19 @@
 {% endblock breadcrumb %}
 
 {% block content %}
+{# H1 #}
+<div class="pt-5 pb-3">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 d-flex justify-content-center">
+        <h1>Регионы</h1>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="py-3">
   <div class="container">
     <div class="row">
-      <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
-        <h1>Регионы</h1>
-      </div>
-
       {% for region in regions %}
       {% if not region.parent %}
       <div class="py-1 py-md-3 col-4">
@@ -44,27 +50,26 @@
       </div>
       {% endif %}
       {% endfor %}
-
-
     </div>
   </div>
 </div>
 
 {% endblock content %}
 
-{# SEO block #}
-{# Canonical #}
-{% block canonical %}{% url 'flags:regions-list' %}{% endblock canonical %}
+{# Begin SEO block #}
+  {# Canonical #}
+  {% block canonical %}{% url 'flags:regions-list' %}{% endblock canonical %}
 
-{# Meta title #}
-{% block meta_title %}{% endblock meta_title %}
+  {# Meta title #}
+  {% block meta_title %}{% endblock meta_title %}
 
-{# Meta description #}
-{% block meta_description %}{% endblock meta_description %}
+  {# Meta description #}
+  {% block meta_description %}{% endblock meta_description %}
 
-{# Meta keywords #}
-{% block meta_keywords %}{% endblock meta_keywords %}
+  {# Meta keywords #}
+  {% block meta_keywords %}{% endblock meta_keywords %}
 
-{% block meta_robots %}
-noindex,follow
-{% endblock meta_robots %}
+  {% block meta_robots %}
+  noindex,follow
+  {% endblock meta_robots %}
+{# End SEO block #}
