added about tpl

--- a/app/templates/pages/about.html
+++ b/app/templates/pages/about.html
@@ -1,1 +1,33 @@
 {% extends "base.html" %}
+
+{% block content %}
+{# H1 #}
+<div class="pt-5 pb-3">
+  <div class="container">
+      <div class="row">
+        <div class="py-1 py-md-3 col-12 d-flex justify-content-center">
+          <h1>О проекте</h1>
+        </div>
+      </div>
+  </div>
+</div>
+<div class="py-3">
+  <div class="container">
+    <div class="row">
+    <div class="col">
+        <p>Проверенная, актувльная и структурированная информация о флагах мира без навязчивой рекламы.</p>
+        <p>Можно скачать изображение флага в любом из нужных форматов:</p>
+        <ul>
+            <li>PNG</li>
+            <li>JPG</li>
+            <li>WebP</li>
+            <li>EPS</li>
+            <li>AI</li>
+            <li>PDF</li>
+            <li>SVG</li>
+        </ul>
+    </div>
+    </div>
+    </div>
+</div>
+{% endblock content %}
