--- a/app/templates/partials/_footer.html
+++ b/app/templates/partials/_footer.html
@@ -2,10 +2,32 @@
     <div class="py-3 py-xl-5">
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-                    Temporary footer
+                <div class="col-md-6 col-lg-4 d-none d-md-block">
+                   <p class="h4">Частые цвета</p>
+                </div>
+                <div class="col-lg-4 d-none d-lg-block">
+                    <ul class="list-unstyled">
+                        <li><a href="#">Рейтинг стран по населению</a></li>
+                        <li><a href="#">Список стран по площади</a></li>
+                        <li><a href="#">Список по ВВП (ППС)</a></li>
+                    </ul>
+                </div>
+                <div class="col-4 col-md-6 col-lg-4 col-xs-12">
+                    <ul class="list-unstyled">
+                        <li><a href="/about/">О проекте</a></li>
+                        <li><a href="/advert/">Реклама</a></li>
+                        <li><a href="/partnership/">Сотрудничество</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
+    <!--
+     <div class="py-3 d-flex justify-content-center copywrite">
+        <a href="#" target="_blank" style="text-decoration:none; font-size:14px;">
+            <span style="color:#fffff;font-weight:bold;">baikov.</span>
+            <span style="color:#e31e25;font-weight:bold;">dev</span>
+        </a>
+    </div>
+    -->
 </footer>
