--- a/app/static/css/project.css
+++ b/app/static/css/project.css
@@ -8864,7 +8864,7 @@ img.main-flag {
 .hover-country:hover .middle {
   opacity: 1; }
 
-.text a {
+.text a, .text span {
   color: #343a40;
   font-size: 14px;
   font-weight: bold; }
